# ya--redis-derive

./: Cargo.toml  README.md
bench/: Cargo.toml  docker-compose.yaml  result.txt
bench/src/: main.rs
src/: lib.rs  main.rs  types.rs
tests/: structs.rs
ya-binary-format/: Cargo.toml
ya-binary-format/examples/: encode-decode.rs
ya-binary-format/src/: bytes.rs  de.rs  io.rs  lib.rs  never.rs  ser.rs  types.rs
ya-redis-derive/: Cargo.toml
ya-redis-derive/src/: data_struct.rs  lib.rs
ya-redis-derive/tests/: structs.rs
ya-redis-proc-macro/: Cargo.toml
ya-redis-proc-macro/src/: data_struct.rs  impls.rs  lib.rs
